Update swag definitions
