# app/infrastructure/http/docs/swagger.json
@@ -18,7 +18,7 @@
     "paths": {
         "/stores": {
             "get": {
-                "description": "Get a list of stores",
+                "description": "Get list of stores",
                 "consumes": [
                     "application/json"
                 ],
@@ -28,7 +28,7 @@
                 "tags": [
                     "stores"
                 ],
-                "summary": "Get all stores",
+                "summary": "Index store",
                 "parameters": [
                     {
                         "type": "integer",
@@ -71,7 +71,7 @@
                 }
             },
             "post": {
-                "description": "Create store",
+                "description": "Create new store",
                 "consumes": [
                     "application/json"
                 ],
@@ -81,7 +81,7 @@
                 "tags": [
                     "stores"
                 ],
-                "summary": "Create  a new store",
+                "summary": "Create store",
                 "parameters": [
                     {
                         "description": "Create store",
@@ -121,71 +121,9 @@
                 }
             }
         },
-        "/stores/active/{id}": {
-            "patch": {
-                "description": "Activate one stores",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "stores"
-                ],
-                "summary": "update store",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "store ID",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "description": "Create store",
-                        "name": "category",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/handler.UpdateStoreRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": ""
-                    },
-                    "400": {
-                        "description": "Bad Request",
-                        "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
-                        }
-                    },
-                    "404": {
-                        "description": "Not Found",
-                        "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
-                        }
-                    },
-                    "422": {
-                        "description": "Unprocessable Entity",
-                        "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/handler.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/stores/{id}": {
             "get": {
-                "description": "Get one stores by id",
+                "description": "Get a stores by id",
                 "consumes": [
                     "application/json"
                 ],
@@ -195,7 +133,7 @@
                 "tags": [
                     "stores"
                 ],
-                "summary": "Get stores by id",
+                "summary": "Get stores",
                 "parameters": [
                     {
                         "type": "string",
@@ -276,11 +214,71 @@
                         }
                     }
                 }
+            },
+            "patch": {
+                "description": "Uptate a stores",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "stores"
+                ],
+                "summary": "Update store",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "store ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Create store",
+                        "name": "category",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/handler.UpdateStoreRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": ""
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
+                    "422": {
+                        "description": "Unprocessable Entity",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/handler.ErrorResponse"
+                        }
+                    }
+                }
             }
         },
         "/stores/{id}/activate": {
             "patch": {
-                "description": "Activate one stores",
+                "description": "Activate a stores",
                 "consumes": [
                     "application/json"
                 ],
@@ -327,7 +325,7 @@
         },
         "/stores/{id}/block": {
             "patch": {
-                "description": "Block one stores",
+                "description": "Block a stores",
                 "consumes": [
                     "application/json"
                 ],
@@ -374,7 +372,7 @@
         },
         "/stores/{id}/disable": {
             "patch": {
-                "description": "Disable one stores",
+                "description": "Disable a stores",
                 "consumes": [
                     "application/json"
                 ],
@@ -421,42 +419,14 @@
         }
     },
     "definitions": {
-        "domain.Category": {
-            "type": "object",
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "status": {
-                    "type": "string"
-                }
-            }
-        },
-        "domain.Position": {
-            "type": "object",
-            "properties": {
-                "lat": {
-                    "type": "number"
-                },
-                "lng": {
-                    "type": "number"
-                }
-            }
-        },
         "domain.Store": {
             "type": "object",
             "properties": {
                 "account_id": {
                     "type": "string"
                 },
-                "category": {
-                    "$ref": "#/definitions/domain.Category"
+                "category_id": {
+                    "type": "string"
                 },
                 "created_at": {
                     "type": "string"
@@ -470,8 +440,11 @@
                 "image": {
                     "type": "string"
                 },
-                "location": {
-                    "$ref": "#/definitions/domain.Position"
+                "lat": {
+                    "type": "number"
+                },
+                "lng": {
+                    "type": "number"
                 },
                 "name": {
                     "type": "string"
